# triangular-meshes

./: .clang-format  .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  README.md  vcpkg.json
cmake/: docs-ci.cmake  install-config.cmake  install-rules.cmake  lint.cmake  spell.cmake  variables.cmake
include/tml/: edge.hpp  error.hpp  face.hpp  mesh.hpp  tml.hpp  vec3.hpp  vertex.hpp
source/: face.cpp  mesh.cpp  tml.cpp  vec3.cpp  vertex.cpp
test/: CMakeLists.txt
test/source/: face.test.cpp  mesh.test.cpp  tml_test.cpp  vec3.test.cpp  vertex.test.cpp
